feat: add native user service enrollment (#71)
